--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,13 +1,60 @@
+alembic==1.14.0
 asgiref==3.8.1
+asttokens==3.0.0
+bcrypt==4.2.0
+blinker==1.8.2
+certifi==2025.1.31
+click==8.1.7
+decorator==5.2.1
+distlib==0.3.9
+dj-database-url==2.3.0
 Django==5.1.5
 django-cors-headers==4.6.0
 djangorestframework==3.15.2
+executing==2.2.0
+filelock==3.18.0
+Flask==3.0.3
+Flask-Admin==1.6.1
+Flask-Bcrypt==1.0.1
+Flask-Cors==5.0.0
+Flask-Login==0.6.3
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
+greenlet==3.1.1
 gunicorn==23.0.0
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
+iniconfig==2.0.0
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.4
+Mako==1.3.6
+MarkupSafe==2.1.5
+matplotlib-inline==0.1.7
 packaging==24.2
-Pygments==2.19.1
-python-dotenv==1.0.1
-sqlparse==0.5.3
-whitenoise==6.9.0
-dj-database-url==2.3.0
+parso==0.8.4
+pexpect==4.9.0
+pipenv==2024.4.1
+platformdirs==4.3.6
+pluggy==1.5.0
+prompt_toolkit==3.0.50
 psycopg2-binary==2.9.10
+ptyprocess==0.7.0
+pure_eval==0.2.3
+Pygments==2.19.1
+pytest==8.3.5
+python-decouple==3.8
+python-dotenv==1.0.1
+SQLAlchemy==2.0.36
+sqlparse==0.5.3
+stack-data==0.6.3
+traitlets==5.14.3
 typing_extensions==4.12.2
+virtualenv==20.29.3
+wcwidth==0.2.13
+Werkzeug==3.0.6
+whitenoise==6.9.0
+WTForms==3.1.2
+zipp==3.20.2
